# SDKSample

OpenSSL/: OpenSSLConfig.cmake  OpenSSL_Win64_sbom.yml  package.yml
boost/: CMakeLists.txt  draco.json  package.yml
boost/cmake/thread/: CMakeLists.txt
doc/: _abstract_alert_condition_state_8h_source.html  _abstract_alert_state_8h_source.html  _abstract_connectable_port_8h_source.html  _abstract_context_state_8h_source.html  _abstract_descriptor_8h_source.html  _abstract_device_component_descriptor_8h_source.html  _abstract_device_component_state_8h_source.html  _abstract_input_queue_8h_source.html  _abstract_local_in_port_8h_source.html  _abstract_metric_descriptor_8h_source.html  _abstract_metric_state_8h_source.html  _abstract_metric_value_8h_source.html  _abstract_multi_state_8h_source.html  _abstract_operation_descriptor_8h_source.html  _abstract_operation_state_8h_source.html  _abstract_set_state_operation_descriptor_8h_source.html  _abstract_state_8h_source.html  _abstract_string_metric_state_8h_source.html  _access_level_8h_source.html  _activate_argument_8h_source.html  _activate_argument_io_8h_source.html  _activate_argument_serialize_8h_source.html  _activate_argument_visit_8h_source.html  _activate_job_8h_source.html  _activate_operation_8h_source.html  _activate_operation_descriptor_8h_source.html  _activate_operation_descriptor_builder_8h_source.html  _activate_operation_descriptor_io_8h_source.html  _activate_operation_descriptor_serialize_8h_source.html  _activate_operation_descriptor_visit_8h_source.html  _activate_operation_state_8h_source.html  (+5757 more)
(+91 files in other folders)
